js_parser.output
Rules useless in parser due to conflicts

   65 ResultSignature: %empty


State 62 conflicts: 9 reduce/reduce
State 103 conflicts: 1 shift/reduce
State 197 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program "end of file"

    1 Program: Statements

    2 Statements: Statements Statement
    3           | Statement

    4 Statement: CodeStatement
    5          | Definition

    6 CodeStatement: EmptyStatement
    7              | ExpressionStatement STMT_TER_OP
    8              | Block
    9              | IfStatement
   10              | SwitchStatement
   11              | DoStatement STMT_TER_OP
   12              | WhileStatement
   13              | ForStatement
   14              | ContinueStatement STMT_TER_OP
   15              | BreakStatement STMT_TER_OP
   16              | ReturnStatement STMT_TER_OP

   17 Definition: VariableDefinition STMT_TER_OP
   18           | FunctionDefinition

   19 EmptyStatement: STMT_TER_OP

   20 ExpressionStatement: Expression

   21 Block: OPEN_C Statements CLOSE_C

   22 IfStatement: IF ParenthesizedExpression CodeStatement
   23            | IF ParenthesizedExpression CodeStatement ELSE CodeStatement

   24 SwitchStatement: SWITCH ParenthesizedExpression OPEN_C CLOSE_C
   25                | SWITCH ParenthesizedExpression OPEN_C CaseGroups LastCaseGroup CLOSE_C

   26 CaseGroups: %empty
   27           | CaseGroups CaseGroup

   28 CaseGroup: CaseGuards CaseStatementsPrefix

   29 LastCaseGroup: CaseGuards CaseStatements

   30 CaseGuards: CASE Expression PA_OP
   31           | DEFAULT PA_OP

   32 CaseStatements: CodeStatement
   33               | CaseStatementsPrefix CodeStatement

   34 CaseStatementsPrefix: CodeStatement
   35                     | CaseStatementsPrefix CodeStatement

   36 DoStatement: DO CodeStatement WHILE ParenthesizedExpression

   37 WhileStatement: WHILE ParenthesizedExpression CodeStatement

   38 ForStatement: FOR OPEN_P ForInitializer STMT_TER_OP OptionalExpression STMT_TER_OP OptionalExpression CLOSE_P CodeStatement

   39 ForInitializer: %empty
   40               | Expression
   41               | VariableDefinitionKind VariableBinding

   42 ContinueStatement: CONTINUE OptionalLabel

   43 BreakStatement: BREAK OptionalLabel

   44 OptionalLabel: %empty
   45              | Identifier

   46 ReturnStatement: RETURN OptionalExpression

   47 VariableDefinition: VariableDefinitionKind VariableBindingList

   48 VariableDefinitionKind: VAR
   49                       | CONST

   50 VariableBindingList: VariableBinding
   51                    | VariableBindingList SEP_OP VariableBinding

   52 VariableBinding: TypedIdentifier VariableInitializer

   53 TypedIdentifier: Identifier
   54                | TypeExpression Identifier

   55 VariableInitializer: %empty
   56                    | VA_OP AssignmentExpression

   57 FunctionDefinition: NamedFunction

   58 FunctionSignature: ParameterSignature ResultSignature

   59 ParameterSignature: OPEN_P Parameters CLOSE_P

   60 Parameters: %empty
   61           | RequiredParameters

   62 RequiredParameters: RequiredParameter
   63                   | RequiredParameters SEP_OP RequiredParameter

   64 RequiredParameter: TypedIdentifier

   65 ResultSignature: %empty
   66                | TypeExpression

   67 Expression: AssignmentExpression
   68           | Expression SEP_OP AssignmentExpression

   69 OptionalExpression: Expression
   70                   | %empty

   71 AssignmentExpression: ConditionalExpression
   72                     | PostfixExpression VA_OP AssignmentExpression
   73                     | PostfixExpression CompoundAssignment AssignmentExpression

   74 CompoundAssignment: SHORT_MUL_OP
   75                   | SHORT_DIV_OP
   76                   | SHORT_MOD_OP
   77                   | SHORT_ADD_OP
   78                   | SHORT_SUB_OP
   79                   | SHORT_BIT_SHIFT_L_OP
   80                   | SHORT_BIT_SHIFT_S_R_OP
   81                   | SHORT_BIT_SHIFT_Z_R_OP
   82                   | SHORT_BIT_AND_OP
   83                   | SHORT_BIT_XOR_OP
   84                   | SHORT_BIT_OR_OP

   85 ParenthesizedExpression: OPEN_P Expression CLOSE_P

   86 Identifier: ID

   87 TypeExpression: NonAssignmentExpression

   88 ConditionalExpression: LogicalOrExpression
   89                      | LogicalOrExpression TERNARY_OP AssignmentExpression PA_OP AssignmentExpression

   90 NonAssignmentExpression: LogicalOrExpression
   91                        | LogicalOrExpression TERNARY_OP NonAssignmentExpression PA_OP NonAssignmentExpression

   92 PostfixExpression: FullPostfixExpression
   93                  | ShortNewExpression

   94 FullPostfixExpression: PrimaryExpression
   95                      | FullNewExpression
   96                      | FullPostfixExpression MemberOperator
   97                      | FullPostfixExpression Arguments
   98                      | PostfixExpression UNIT_ADD_OP
   99                      | PostfixExpression UNIT_SUB_OP
  100                      | PostfixExpression LOGIC_NOT_OP
  101                      | PostfixExpression BIT_NOT_OP

  102 FullNewExpression: NEW FullNewSubexpression Arguments

  103 ShortNewExpression: NEW ShortNewSubexpression

  104 FullNewSubexpression: PrimaryExpression
  105                     | FullNewSubexpression MemberOperator
  106                     | FullNewExpression

  107 ShortNewSubexpression: FullNewSubexpression
  108                      | ShortNewExpression

  109 MemberOperator: OPEN_B ArgumentList CLOSE_B
  110               | MEM_ACC_OP QualifiedIdentifier
  111               | MEM_ACC_OP ParenthesizedExpression

  112 Arguments: OPEN_P ArgumentList CLOSE_P

  113 ArgumentList: %empty
  114             | ArgumentListPrefix

  115 ArgumentListPrefix: AssignmentExpression
  116                   | ArgumentListPrefix SEP_OP AssignmentExpression

  117 PrimaryExpression: SimpleExpression
  118                  | FunctionExpression
  119                  | ObjectLiteral

  120 SimpleExpression: NULL_V
  121                 | TRUE_V
  122                 | FALSE_V
  123                 | INT_V
  124                 | FLT_V
  125                 | STRING
  126                 | QualifiedIdentifier
  127                 | ParenthesizedExpression
  128                 | ArrayLiteral

  129 FunctionExpression: AnonymousFunction
  130                   | NamedFunction

  131 AnonymousFunction: FUNCTION FunctionSignature Block

  132 NamedFunction: FUNCTION Identifier FunctionSignature Block

  133 QualifiedIdentifier: Identifier

  134 ObjectLiteral: OPEN_C CLOSE_C
  135              | OPEN_C FieldList CLOSE_C

  136 FieldList: LiteralField
  137          | FieldList SEP_OP LiteralField

  138 LiteralField: QualifiedIdentifier PA_OP AssignmentExpression

  139 ArrayLiteral: OPEN_B CLOSE_B
  140             | OPEN_B ElementList CLOSE_B

  141 ElementList: LiteralElement
  142            | ElementList SEP_OP LiteralElement

  143 LiteralElement: AssignmentExpression

  144 LogicalOrExpression: LogicalAndExpression
  145                    | LogicalOrExpression LOGIC_OR_OP LogicalAndExpression

  146 LogicalAndExpression: BitwiseOrExpression
  147                     | LogicalAndExpression LOGIC_AND_OP BitwiseOrExpression

  148 BitwiseOrExpression: BitwiseXorExpression
  149                    | BitwiseOrExpression BIT_OR_OP BitwiseXorExpression

  150 BitwiseXorExpression: BitwiseAndExpression
  151                     | BitwiseXorExpression BIT_XOR_OP BitwiseAndExpression

  152 BitwiseAndExpression: EqualityExpression
  153                     | BitwiseAndExpression BIT_AND_OP EqualityExpression

  154 EqualityExpression: RelationalExpression
  155                   | EqualityExpression EQ_V_OP RelationalExpression
  156                   | EqualityExpression NEG_V_OP RelationalExpression
  157                   | EqualityExpression EQ_VT_OP RelationalExpression
  158                   | EqualityExpression NEG_VT_OP RelationalExpression

  159 RelationalExpression: ShiftExpression
  160                     | RelationalExpression L_OP ShiftExpression
  161                     | RelationalExpression G_OP ShiftExpression
  162                     | RelationalExpression LE_OP ShiftExpression
  163                     | RelationalExpression GE_OP ShiftExpression
  164                     | RelationalExpression INSTANCEOF ShiftExpression

  165 ShiftExpression: AdditiveExpression
  166                | ShiftExpression BIT_SHIFT_L_OP AdditiveExpression
  167                | ShiftExpression BIT_SHIFT_S_R_OP AdditiveExpression
  168                | ShiftExpression BIT_SHIFT_Z_R_OP AdditiveExpression

  169 AdditiveExpression: MultiplicativeExpression
  170                   | AdditiveExpression ADD_OP MultiplicativeExpression
  171                   | AdditiveExpression SUB_OP MultiplicativeExpression

  172 MultiplicativeExpression: UnaryExpression
  173                         | MultiplicativeExpression MUL_OP UnaryExpression
  174                         | MultiplicativeExpression DIV_OP UnaryExpression
  175                         | MultiplicativeExpression MOD_OP UnaryExpression

  176 UnaryExpression: PostfixExpression
  177                | UNIT_ADD_OP PostfixExpression
  178                | UNIT_SUB_OP PostfixExpression
  179                | ADD_OP UnaryExpression
  180                | SUB_OP UnaryExpression
  181                | BIT_NOT_OP UnaryExpression
  182                | LOGIC_NOT_OP UnaryExpression


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
NULL_V (258) 120
TRUE_V (259) 121
FALSE_V (260) 122
FLT_V (261) 124
INT_V (262) 123
STRING (263) 125
BIT_NOT_OP (264) 101 181
CLOSE_C (265) 21 24 25 134 135
OPEN_C (266) 21 24 25 134 135
CLOSE_B (267) 109 139 140
OPEN_B (268) 109 139 140
CLOSE_P (269) 38 59 85 112
OPEN_P (270) 38 59 85 112
TERNARY_OP (271) 89 91
LOGIC_OR_OP (272) 145
SHORT_BIT_OR_OP (273) 84
BIT_OR_OP (274) 149
SHORT_BIT_XOR_OP (275) 83
BIT_XOR_OP (276) 151
SHORT_BIT_SHIFT_Z_R_OP (277) 81
BIT_SHIFT_Z_R_OP (278) 168
SHORT_BIT_SHIFT_S_R_OP (279) 80
BIT_SHIFT_S_R_OP (280) 167
GE_OP (281) 163
G_OP (282) 161
EQ_VT_OP (283) 157
EQ_V_OP (284) 155
VA_OP (285) 56 72
LE_OP (286) 162
SHORT_BIT_SHIFT_L_OP (287) 79
BIT_SHIFT_L_OP (288) 166
L_OP (289) 160
STMT_TER_OP (290) 7 11 14 15 16 17 19 38
PA_OP (291) 30 31 89 91 138
SHORT_DIV_OP (292) 75
DIV_OP (293) 174
MEM_ACC_OP (294) 110 111
SHORT_SUB_OP (295) 78
UNIT_SUB_OP (296) 99 178
SUB_OP (297) 171 180
SEP_OP (298) 51 63 68 116 137 142
SHORT_ADD_OP (299) 77
UNIT_ADD_OP (300) 98 177
ADD_OP (301) 170 179
SHORT_MUL_OP (302) 74
MUL_OP (303) 173
SHORT_BIT_AND_OP (304) 82
LOGIC_AND_OP (305) 147
BIT_AND_OP (306) 153
SHORT_MOD_OP (307) 76
MOD_OP (308) 175
NEG_VT_OP (309) 158
NEG_V_OP (310) 156
LOGIC_NOT_OP (311) 100 182
BREAK (312) 43
CASE (313) 30
CONST (314) 49
CONTINUE (315) 42
DEFAULT (316) 31
DO (317) 36
ELSE (318) 23
FOR (319) 38
FUNCTION (320) 131 132
IF (321) 22 23
INSTANCEOF (322) 164
NEW (323) 102 103
RETURN (324) 46
SWITCH (325) 24 25
VAR (326) 48
WHILE (327) 36 37
ID (328) 86


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
Program (75)
    on left: 1, on right: 0
Statements (76)
    on left: 2 3, on right: 1 2 21
Statement (77)
    on left: 4 5, on right: 2 3
CodeStatement (78)
    on left: 6 7 8 9 10 11 12 13 14 15 16, on right: 4 22 23 32 33
    34 35 36 37 38
Definition (79)
    on left: 17 18, on right: 5
EmptyStatement (80)
    on left: 19, on right: 6
ExpressionStatement (81)
    on left: 20, on right: 7
Block (82)
    on left: 21, on right: 8 131 132
IfStatement (83)
    on left: 22 23, on right: 9
SwitchStatement (84)
    on left: 24 25, on right: 10
CaseGroups (85)
    on left: 26 27, on right: 25 27
CaseGroup (86)
    on left: 28, on right: 27
LastCaseGroup (87)
    on left: 29, on right: 25
CaseGuards (88)
    on left: 30 31, on right: 28 29
CaseStatements (89)
    on left: 32 33, on right: 29
CaseStatementsPrefix (90)
    on left: 34 35, on right: 28 33 35
DoStatement (91)
    on left: 36, on right: 11
WhileStatement (92)
    on left: 37, on right: 12
ForStatement (93)
    on left: 38, on right: 13
ForInitializer (94)
    on left: 39 40 41, on right: 38
ContinueStatement (95)
    on left: 42, on right: 14
BreakStatement (96)
    on left: 43, on right: 15
OptionalLabel (97)
    on left: 44 45, on right: 42 43
ReturnStatement (98)
    on left: 46, on right: 16
VariableDefinition (99)
    on left: 47, on right: 17
VariableDefinitionKind (100)
    on left: 48 49, on right: 41 47
VariableBindingList (101)
    on left: 50 51, on right: 47 51
VariableBinding (102)
    on left: 52, on right: 41 50 51
TypedIdentifier (103)
    on left: 53 54, on right: 52 64
VariableInitializer (104)
    on left: 55 56, on right: 52
FunctionDefinition (105)
    on left: 57, on right: 18
FunctionSignature (106)
    on left: 58, on right: 131 132
ParameterSignature (107)
    on left: 59, on right: 58
Parameters (108)
    on left: 60 61, on right: 59
RequiredParameters (109)
    on left: 62 63, on right: 61 63
RequiredParameter (110)
    on left: 64, on right: 62 63
ResultSignature (111)
    on left: 65 66, on right: 58
Expression (112)
    on left: 67 68, on right: 20 30 40 68 69 85
OptionalExpression (113)
    on left: 69 70, on right: 38 46
AssignmentExpression (114)
    on left: 71 72 73, on right: 56 67 68 72 73 89 115 116 138 143
CompoundAssignment (115)
    on left: 74 75 76 77 78 79 80 81 82 83 84, on right: 73
ParenthesizedExpression (116)
    on left: 85, on right: 22 23 24 25 36 37 111 127
Identifier (117)
    on left: 86, on right: 45 53 54 132 133
TypeExpression (118)
    on left: 87, on right: 54 66
ConditionalExpression (119)
    on left: 88 89, on right: 71
NonAssignmentExpression (120)
    on left: 90 91, on right: 87 91
PostfixExpression (121)
    on left: 92 93, on right: 72 73 98 99 100 101 176 177 178
FullPostfixExpression (122)
    on left: 94 95 96 97 98 99 100 101, on right: 92 96 97
FullNewExpression (123)
    on left: 102, on right: 95 106
ShortNewExpression (124)
    on left: 103, on right: 93 108
FullNewSubexpression (125)
    on left: 104 105 106, on right: 102 105 107
ShortNewSubexpression (126)
    on left: 107 108, on right: 103
MemberOperator (127)
    on left: 109 110 111, on right: 96 105
Arguments (128)
    on left: 112, on right: 97 102
ArgumentList (129)
    on left: 113 114, on right: 109 112
ArgumentListPrefix (130)
    on left: 115 116, on right: 114 116
PrimaryExpression (131)
    on left: 117 118 119, on right: 94 104
SimpleExpression (132)
    on left: 120 121 122 123 124 125 126 127 128, on right: 117
FunctionExpression (133)
    on left: 129 130, on right: 118
AnonymousFunction (134)
    on left: 131, on right: 129
NamedFunction (135)
    on left: 132, on right: 57 130
QualifiedIdentifier (136)
    on left: 133, on right: 110 126 138
ObjectLiteral (137)
    on left: 134 135, on right: 119
FieldList (138)
    on left: 136 137, on right: 135 137
LiteralField (139)
    on left: 138, on right: 136 137
ArrayLiteral (140)
    on left: 139 140, on right: 128
ElementList (141)
    on left: 141 142, on right: 140 142
LiteralElement (142)
    on left: 143, on right: 141 142
LogicalOrExpression (143)
    on left: 144 145, on right: 88 89 90 91 145
LogicalAndExpression (144)
    on left: 146 147, on right: 144 145 147
BitwiseOrExpression (145)
    on left: 148 149, on right: 146 147 149
BitwiseXorExpression (146)
    on left: 150 151, on right: 148 149 151
BitwiseAndExpression (147)
    on left: 152 153, on right: 150 151 153
EqualityExpression (148)
    on left: 154 155 156 157 158, on right: 152 153 155 156 157 158
RelationalExpression (149)
    on left: 159 160 161 162 163 164, on right: 154 155 156 157 158
    160 161 162 163 164
ShiftExpression (150)
    on left: 165 166 167 168, on right: 159 160 161 162 163 164 166
    167 168
AdditiveExpression (151)
    on left: 169 170 171, on right: 165 166 167 168 170 171
MultiplicativeExpression (152)
    on left: 172 173 174 175, on right: 169 170 171 173 174 175
UnaryExpression (153)
    on left: 176 177 178 179 180 181 182, on right: 172 173 174 175
    179 180 181 182


State 0

    0 $accept: . Program "end of file"

    NULL_V        shift, and go to state 1
    TRUE_V        shift, and go to state 2
    FALSE_V       shift, and go to state 3
    FLT_V         shift, and go to state 4
    INT_V         shift, and go to state 5
    STRING        shift, and go to state 6
    BIT_NOT_OP    shift, and go to state 7
    OPEN_C        shift, and go to state 8
    OPEN_B        shift, and go to state 9
    OPEN_P        shift, and go to state 10
    STMT_TER_OP   shift, and go to state 11
    UNIT_SUB_OP   shift, and go to state 12
    SUB_OP        shift, and go to state 13
    UNIT_ADD_OP   shift, and go to state 14
    ADD_OP        shift, and go to state 15
    LOGIC_NOT_OP  shift, and go to state 16
    BREAK         shift, and go to state 17
    CONST         shift, and go to state 18
    CONTINUE      shift, and go to state 19
    DO            shift, and go to state 20
    FOR           shift, and go to state 21
    FUNCTION      shift, and go to state 22
    IF            shift, and go to state 23
    NEW           shift, and go to state 24
    RETURN        shift, and go to state 25
    SWITCH        shift, and go to state 26
    VAR           shift, and go to state 27
    WHILE         shift, and go to state 28
    ID            shift, and go to state 29

    Program                   go to state 30
    Statements                go to state 31
    Statement                 go to state 32
    CodeStatement             go to state 33
    Definition                go to state 34
    EmptyStatement            go to state 35
    ExpressionStatement       go to state 36
    Block                     go to state 37
    IfStatement               go to state 38
    SwitchStatement           go to state 39
    DoStatement               go to state 40
    WhileStatement            go to state 41
    ForStatement              go to state 42
    ContinueStatement         go to state 43
    BreakStatement            go to state 44
    ReturnStatement           go to state 45
    VariableDefinition        go to state 46
    VariableDefinitionKind    go to state 47
    FunctionDefinition        go to state 48
    Expression                go to state 49
    AssignmentExpression      go to state 50
    ParenthesizedExpression   go to state 51
    Identifier                go to state 52
    ConditionalExpression     go to state 53
    PostfixExpression         go to state 54
    FullPostfixExpression     go to state 55
    FullNewExpression         go to state 56
    ShortNewExpression        go to state 57
    PrimaryExpression         go to state 58
    SimpleExpression          go to state 59
    FunctionExpression        go to state 60
    AnonymousFunction         go to state 61
    NamedFunction             go to state 62
    QualifiedIdentifier       go to state 63
    ObjectLiteral             go to state 64
    ArrayLiteral              go to state 65
    LogicalOrExpression       go to state 66
    LogicalAndExpression      go to state 67
    BitwiseOrExpression       go to state 68
    BitwiseXorExpression      go to state 69
    BitwiseAndExpression      go to state 70
    EqualityExpression        go to state 71
    RelationalExpression      go to state 72
    ShiftExpression           go to state 73
    AdditiveExpression        go to state 74
    MultiplicativeExpression  go to state 75
    UnaryExpression           go to state 76


State 1

  120 SimpleExpression: NULL_V .

    $default  reduce using rule 120 (SimpleExpression)


State 2

  121 SimpleExpression: TRUE_V .

    $default  reduce using rule 121 (SimpleExpression)


State 3

  122 SimpleExpression: FALSE_V .

    $default  reduce using rule 122 (SimpleExpression)


State 4

  124 SimpleExpression: FLT_V .

    $default  reduce using rule 124 (SimpleExpression)


State 5

  123 SimpleExpression: INT_V .

    $default  reduce using rule 123 (SimpleExpression)


State 6

  125 SimpleExpression: STRING .

    $default  reduce using rule 125 (SimpleExpression)


State 7

  181 UnaryExpression: BIT_NOT_OP . UnaryExpression

    NULL_V        shift, and go to state 1
    TRUE_V        shift, and go to state 2
    FALSE_V       shift, and go to state 3
    FLT_V         shift, and go to state 4
    INT_V         shift, and go to state 5
    STRING        shift, and go to state 6
    BIT_NOT_OP    shift, and go to state 7
    OPEN_C        shift, and go to state 77
    OPEN_B        shift, and go to state 9
    OPEN_P        shift, and go to state 10
    UNIT_SUB_OP   shift, and go to state 12
    SUB_OP        shift, and go to state 13
    UNIT_ADD_OP   shift, and go to state 14
    ADD_OP        shift, and go to state 15
    LOGIC_NOT_OP  shift, and go to state 16
    FUNCTION      shift, and go to state 22
    NEW           shift, and go to state 24
    ID            shift, and go to state 29

    ParenthesizedExpression  go to state 51
    Identifier               go to state 52
    PostfixExpression        go to state 78
    FullPostfixExpression    go to state 55
    FullNewExpression        go to state 56
    ShortNewExpression       go to state 57
    PrimaryExpression        go to state 58
    SimpleExpression         go to state 59
    FunctionExpression       go to state 60
    AnonymousFunction        go to state 61
    NamedFunction            go to state 79
    QualifiedIdentifier      go to state 63
    ObjectLiteral            go to state 64
    ArrayLiteral             go to state 65
    UnaryExpression          go to state 80


State 8

   21 Block: OPEN_C . Statements CLOSE_C
  134 ObjectLiteral: OPEN_C . CLOSE_C
  135              | OPEN_C . FieldList CLOSE_C

    NULL_V        shift, and go to state 1
    TRUE_V        shift, and go to state 2
    FALSE_V       shift, and go to state 3
    FLT_V         shift, and go to state 4
    INT_V         shift, and go to state 5
    STRING        shift, and go to state 6
    BIT_NOT_OP    shift, and go to state 7
    CLOSE_C       shift, and go to state 81
    OPEN_C        shift, and go to state 8
    OPEN_B        shift, and go to state 9
    OPEN_P        shift, and go to state 10
    STMT_TER_OP   shift, and go to state 11
    UNIT_SUB_OP   shift, and go to state 12
    SUB_OP        shift, and go to state 13
    UNIT_ADD_OP   shift, and go to state 14
    ADD_OP        shift, and go to state 15
    LOGIC_NOT_OP  shift, and go to state 16
    BREAK         shift, and go to state 17
    CONST         shift, and go to state 18
    CONTINUE      shift, and go to state 19
    DO            shift, and go to state 20
    FOR           shift, and go to state 21
    FUNCTION      shift, and go to state 22
    IF            shift, and go to state 23
    NEW           shift, and go to state 24
    RETURN        shift, and go to state 25
    SWITCH        shift, and go to state 26
    VAR           shift, and go to state 27
    WHILE         shift, and go to state 28
    ID            shift, and go to state 29

    Statements                go to state 82
    Statement                 go to state 32
    CodeStatement             go to state 33
    Definition                go to state 34
    EmptyStatement            go to state 35
    ExpressionStatement       go to state 36
    Block                     go to state 37
    IfStatement               go to state 38
    SwitchStatement           go to state 39
    DoStatement               go to state 40
    WhileStatement            go to state 41
    ForStatement              go to state 42
    ContinueStatement         go to state 43
    BreakStatement            go to state 44
    ReturnStatement           go to state 45
    VariableDefinition        go to state 46
    VariableDefinitionKind    go to state 47
    FunctionDefinition        go to state 48
    Expression                go to state 49
    AssignmentExpression      go to state 50
    ParenthesizedExpression   go to state 51
    Identifier                go to state 52
    ConditionalExpression     go to state 53
    PostfixExpression         go to state 54
    FullPostfixExpression     go to state 55
    FullNewExpression         go to state 56
    ShortNewExpression        go to state 57
    PrimaryExpression         go to state 58
    SimpleExpression          go to state 59
    FunctionExpression        go to state 60
    AnonymousFunction         go to state 61
    NamedFunction             go to state 62
    QualifiedIdentifier       go to state 83
    ObjectLiteral             go to state 64
    FieldList                 go to state 84
    LiteralField              go to state 85
    ArrayLiteral              go to state 65
    LogicalOrExpression       go to state 66
    LogicalAndExpression      go to state 67
    BitwiseOrExpression       go to state 68
    BitwiseXorExpression      go to state 69
    BitwiseAndExpression      go to state 70
    EqualityExpression        go to state 71
    RelationalExpression      go to state 72
    ShiftExpression           go to state 73
    AdditiveExpression        go to state 74
    MultiplicativeExpression  go to state 75
    UnaryExpression           go to state 76


State 9

  139 ArrayLiteral: OPEN_B . CLOSE_B
  140             | OPEN_B . ElementList CLOSE_B

    NULL_V        shift, and go to state 1
    TRUE_V        shift, and go to state 2
    FALSE_V       shift, and go to state 3
    FLT_V         shift, and go to state 4
    INT_V         shift, and go to state 5
    STRING        shift, and go to state 6
    BIT_NOT_OP    shift, and go to state 7
    OPEN_C        shift, and go to state 77
    CLOSE_B       shift, and go to state 86
    OPEN_B        shift, and go to state 9
    OPEN_P        shift, and go to state 10
    UNIT_SUB_OP   shift, and go to state 12
    SUB_OP        shift, and go to state 13
    UNIT_ADD_OP   shift, and go to state 14
    ADD_OP        shift, and go to state 15
    LOGIC_NOT_OP  shift, and go to state 16
    FUNCTION      shift, and go to state 22
    NEW           shift, and go to state 24
    ID            shift, and go to state 29

    AssignmentExpression      go to state 87
    ParenthesizedExpression   go to state 51
    Identifier                go to state 52
    ConditionalExpression     go to state 53
    PostfixExpression         go to state 54
    FullPostfixExpression     go to state 55
    FullNewExpression         go to state 56
    ShortNewExpression        go to state 57
    PrimaryExpression         go to state 58
    SimpleExpression          go to state 59
    FunctionExpression        go to state 60
    AnonymousFunction         go to state 61
    NamedFunction             go to state 79
    QualifiedIdentifier       go to state 63
    ObjectLiteral             go to state 64
    ArrayLiteral              go to state 65
    ElementList               go to state 88
    LiteralElement            go to state 89
    LogicalOrExpression       go to state 66
    LogicalAndExpression      go to state 67
    BitwiseOrExpression       go to state 68
    BitwiseXorExpression      go to state 69
    BitwiseAndExpression      go to state 70
    EqualityExpression        go to state 71
    RelationalExpression      go to state 72
    ShiftExpression           go to state 73
    AdditiveExpression        go to state 74
    MultiplicativeExpression  go to state 75
    UnaryExpression           go to state 76


State 10

   85 ParenthesizedExpression: OPEN_P . Expression CLOSE_P

    NULL_V        shift, and go to state 1
    TRUE_V        shift, and go to state 2
    FALSE_V       shift, and go to state 3
    FLT_V         shift, and go to state 4
    INT_V         shift, and go to state 5
    STRING        shift, and go to state 6
    BIT_NOT_OP    shift, and go to state 7
    OPEN_C        shift, and go to state 77
    OPEN_B        shift, and go to state 9
    OPEN_P        shift, and go to state 10
    UNIT_SUB_OP   shift, and go to state 12
    SUB_OP        shift, and go to state 13
    UNIT_ADD_OP   shift, and go to state 14
    ADD_OP        shift, and go to state 15
    LOGIC_NOT_OP  shift, and go to state 16
    FUNCTION      shift, and go to state 22
    NEW           shift, and go to state 24
    ID            shift, and go to state 29

    Expression                go to state 90
    AssignmentExpression      go to state 50
    ParenthesizedExpression   go to state 51
    Identifier                go to state 52
    ConditionalExpression     go to state 53
    PostfixExpression         go to state 54
    FullPostfixExpression     go to state 55
    FullNewExpression         go to state 56
    ShortNewExpression        go to state 57
    PrimaryExpression         go to state 58
    SimpleExpression          go to state 59
    FunctionExpression        go to state 60
    AnonymousFunction         go to state 61
    NamedFunction             go to state 79
    QualifiedIdentifier       go to state 63
    ObjectLiteral             go to state 64
    ArrayLiteral              go to state 65
    LogicalOrExpression       go to state 66
    LogicalAndExpression      go to state 67
    BitwiseOrExpression       go to state 68
    BitwiseXorExpression      go to state 69
    BitwiseAndExpression      go to state 70
    EqualityExpression        go to state 71
    RelationalExpression      go to state 72
    ShiftExpression           go to state 73
    AdditiveExpression        go to state 74
    MultiplicativeExpression  go to state 75
    UnaryExpression           go to state 76


State 11

   19 EmptyStatement: STMT_TER_OP .

    $default  reduce using rule 19 (EmptyStatement)


State 12

  178 UnaryExpression: UNIT_SUB_OP . PostfixExpression

    NULL_V    shift, and go to state 1
    TRUE_V    shift, and go to state 2
    FALSE_V   shift, and go to state 3
    FLT_V     shift, and go to state 4
    INT_V     shift, and go to state 5
    STRING    shift, and go to state 6
    OPEN_C    shift, and go to state 77
    OPEN_B    shift, and go to state 9
    OPEN_P    shift, and go to state 10
    FUNCTION  shift, and go to state 22
    NEW       shift, and go to state 24
    ID        shift, and go to state 29

    ParenthesizedExpression  go to state 51
    Identifier               go to state 52
    PostfixExpression        go to state 91
    FullPostfixExpression    go to state 55
    FullNewExpression        go to state 56
    ShortNewExpression       go to state 57
    PrimaryExpression        go to state 58
    SimpleExpression         go to state 59
    FunctionExpression       go to state 60
    AnonymousFunction        go to state 61
    NamedFunction            go to state 79
    QualifiedIdentifier      go to state 63
    ObjectLiteral            go to state 64
    ArrayLiteral             go to state 65


State 13

  180 UnaryExpression: SUB_OP . UnaryExpression

    NULL_V        shift, and go to state 1
    TRUE_V        shift, and go to state 2
    FALSE_V       shift, and go to state 3
    FLT_V         shift, and go to state 4
    INT_V         shift, and go to state 5
    STRING        shift, and go to state 6
    BIT_NOT_OP    shift, and go to state 7
    OPEN_C        shift, and go to state 77
    OPEN_B        shift, and go to state 9
    OPEN_P        shift, and go to state 10
    UNIT_SUB_OP   shift, and go to state 12
    SUB_OP        shift, and go to state 13
    UNIT_ADD_OP   shift, and go to state 14
    ADD_OP        shift, and go to state 15
    LOGIC_NOT_OP  shift, and go to state 16
    FUNCTION      shift, and go to state 22
    NEW           shift, and go to state 24
    ID            shift, and go to state 29

    ParenthesizedExpression  go to state 51
    Identifier               go to state 52
    PostfixExpression        go to state 78
    FullPostfixExpression    go to state 55
    FullNewExpression        go to state 56
    ShortNewExpression       go to state 57
    PrimaryExpression        go to state 58
    SimpleExpression         go to state 59
    FunctionExpression       go to state 60
    AnonymousFunction        go to state 61
    NamedFunction            go to state 79
    QualifiedIdentifier      go to state 63
    ObjectLiteral            go to state 64
    ArrayLiteral             go to state 65
    UnaryExpression          go to state 92


State 14

  177 UnaryExpression: UNIT_ADD_OP . PostfixExpression

    NULL_V    shift, and go to state 1
    TRUE_V    shift, and go to state 2
    FALSE_V   shift, and go to state 3
    FLT_V     shift, and go to state 4
    INT_V     shift, and go to state 5
    STRING    shift, and go to state 6
    OPEN_C    shift, and go to state 77
    OPEN_B    shift, and go to state 9
    OPEN_P    shift, and go to state 10
    FUNCTION  shift, and go to state 22
    NEW       shift, and go to state 24
    ID        shift, and go to state 29

    ParenthesizedExpression  go to state 51
    Identifier               go to state 52
    PostfixExpression        go to state 93
    FullPostfixExpression    go to state 55
    FullNewExpression        go to state 56
    ShortNewExpression       go to state 57
    PrimaryExpression        go to state 58
    SimpleExpression         go to state 59
    FunctionExpression       go to state 60
    AnonymousFunction        go to state 61
    NamedFunction            go to state 79
    QualifiedIdentifier      go to state 63
    ObjectLiteral            go to state 64
    ArrayLiteral             go to state 65


State 15

  179 UnaryExpression: ADD_OP . UnaryExpression

    NULL_V        shift, and go to state 1
    TRUE_V        shift, and go to state 2
    FALSE_V       shift, and go to state 3
    FLT_V         shift, and go to state 4
    INT_V         shift, and go to state 5
    STRING        shift, and go to state 6
    BIT_NOT_OP    shift, and go to state 7
    OPEN_C        shift, and go to state 77
    OPEN_B        shift, and go to state 9
    OPEN_P        shift, and go to state 10
    UNIT_SUB_OP   shift, and go to state 12
    SUB_OP        shift, and go to state 13
    UNIT_ADD_OP   shift, and go to state 14
    ADD_OP        shift, and go to state 15
    LOGIC_NOT_OP  shift, and go to state 16
    FUNCTION      shift, and go to state 22
    NEW           shift, and go to state 24
    ID            shift, and go to state 29

    ParenthesizedExpression  go to state 51
    Identifier               go to state 52
    PostfixExpression        go to state 78
    FullPostfixExpression    go to state 55
    FullNewExpression        go to state 56
    ShortNewExpression       go to state 57
    PrimaryExpression        go to state 58
    SimpleExpression         go to state 59
    FunctionExpression       go to state 60
    AnonymousFunction        go to state 61
    NamedFunction            go to state 79
    QualifiedIdentifier      go to state 63
    ObjectLiteral            go to state 64
    ArrayLiteral             go to state 65
    UnaryExpression          go to state 94


State 16

  182 UnaryExpression: LOGIC_NOT_OP . UnaryExpression
